[BZ #4359]

2007-10-13  Ulrich Drepper  <drepper@redhat.com>
	[BZ #4359]
	* libio/__freading.c (__freading): Don't return true for
	write-only streams.